<resources>
<string name="app_name">MyChat</string>
<string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="user_name_error">用户名不合法，6到20位，首字符必须是字母</string>
    <string name="password_error">密码不合法，6到20位，首字符必须是字母</string>
    <string name="confirm_password_error">密码和确认密码不一致</string>
    <string name="registering">正在注册...</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="login_failed">登录失败</string>
    <string name="logining">正在登录...</string>
    <string name="user_name_exist">用户名已存在</string>

    <string name="conversation">消息</string>
    <string name="contact">联系人</string>
    <string name="mine">我的</string>
    <string name="logout">退(%s)出</string>
    <string name="logout_failed">退出失败</string>
    <string name="logout_success">退出成功</string>
    <string name="logouting">正在退出...</string>
    <string name="load_contacts_success">加载联系人成功</string>
    <string name="load_contacts_failed">加载联系人失败</string>
    <string name="add_friend">添加好友</string>
    <string name="search_success">搜索成功</string>
    <string name="search_failed">搜索失败</string>
    <string name="search_empty">未搜索到符合条件的用户</string>
    <string name="searching">正在搜索...</string>
    <string name="already_added">已添加</string>
    <string name="send_add_friend_request_success">发送添加好友请求成功</string>
    <string name="send_add_friend_request_failed">发送添加好友请求失败</string>
    <string name="delete_friend">删除好友</string>
    <string name="delete_friend_message">与%s友尽</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="delete_friend_failed">删除好友失败</string>
    <string name="send">发送</string>
    <string name="chat_title">与%s聊天中</string>
    <string name="send_message_success">发送消息成功</string>
    <string name="send_message_failed">发送消息失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="load_more_messages_success">加载更多数据成功</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="load_conversations_success">加载会话成功</string>
    <string name="receive_new_message">收到一条新消息</string>
    <string name="username_or_password_empty">用户名和密码不能为空</string>
</resources>
