<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@mipmap/login_bk">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/avatar6"/>

    <EditText
        android:id="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_name"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="text"/>

    <Button
        android:id="@id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/login"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_login"/>
    
    <TextView
        android:id="@id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/new_user"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"/>

</LinearLayout>